horizontal scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+html {
+  scroll-behavior: smooth;
+  margin: 0px !important;
+  padding: 0px !important;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px !important;
+  padding: 0px !important;
+  position: relative;
+}
+html,body{
+  overflow-x: hidden;
+}
 .App {
   /* text-align: center; */
 }
